[tool.poetry]
name = "rngesuit"
version = "0.1.0"
description = ""
authors = ["Anish Sinha <anishsinha0128@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dearpygui = "^2.0.0"
sqlalchemy = "^2.0.36"
psycopg = { extras = ["binary"], version = "^3.2.3" }
faker = "^33.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
